Table Aluno {
  nim int [pk]
  cod_aluno int
  num_corpo int [not null, unique]
  ano int
  nome varchar (50)
  ramo Ramo
  curso Curso
  sexo varchar (1)
  data_nascimento date
  altura float
  peso float
}

Table TFB {
  id int [pk]
  tipo_aval varchar (10) //TFB1, TFB2, ExJul, ExSet
  nim int [ref: > Aluno.nim]
  
  //Repetições feitas pelo aluno
  flex_br_rep int
  ext_br_rep int 
  abd_rep int
  cooper_dist int

  //Notas obtidas pelo aluno
  flex_br_nota int
  ext_br_nota int 
  abd_nota int
  cooper_nota int

  //Nota final a TFB
  nota float
}

Table Modalidade {
  id int [pk]
  nome varchar(20) // "Gin", "Judo", "Equi", "Boxe", "CCC", "F311"
}

Table ModalidadeResultado {
  id int [pk]
  nim int [ref: > Aluno.nim]
  modalidade_id int [ref: > Modalidade.id]
  tipo_aval varchar(10) // TFB1, TFB2, ExJul, ExSet
  nota float
}

Table TFB_Final {
  id int [pk]
  nim int [ref: > Aluno.nim]
 
  gin_nota float 
  nota_tfb float

  tfb_final float
  resultado Resultado //nota >=9,5 (Aprovado) <9,5 (Exame)
}

Table TFAM {
  id int [pk]
  nim int [ref: > Aluno.nim]

  tipo_prova varchar(20) //200m, MarCor, 500m e Triatlo
  tipo_aval varchar(10) // Anual, ExJul, ExSet
  tempo_inicio interval
  tempo_fim interval
  acertos interval 
  tempo_final interval
  nota_base float
}

Table TFAM_Triatlo {
  id int [pk]
  tfam_id int [ref: > TFAM.id]
  granadas_5m int
  granadas_10m int
  granadas_15m int
  granadas_menos_5m int
  apoios int
}

Table TFAM_Final {
  id int [pk]
  nim int [ref: > Aluno.nim]
  tfam_id int [ref: > TFAM.id]

  nota_base float 
  tfam_final float 
  resultado Resultado //nota >=9,5 (Aprovado) <9,5 (Exame)
}

Table PesoGrII{
  id int [pk]
  ano int
  componente varchar(10)
  peso float
}

Table ClassFinal {
  id int [pk]
  nim int [ref: > Aluno.nim]

  tfb_final float 
  tfam_final float
  f311_nota float

  tfb_exame float
  tfb_exame_resultado Resultado

  tfam_exame float
  tfam_exame_resultado Resultado

  class_final float
  
}
  
//Tabelas de Avaliação
Table flex_br {
  id int [pk]
  sexo varcahr(1)
  flex_br_rep int
  flex_br_nota float
}

Table ext_br {
  id int [pk]
  sexo varcahr(1)
  ext_br_rep int
  ext_br_nota float
}

//Table abd {
//  id int [pk]
//  sexo varcahr(1)
//  abd_rep int
//  abd_nota float
//}

Table cooper {
  id int [pk]
  sexo varcahr(1)
  cooper_dist int
  cooper_nota float
}

Table Pista200 {
  id int [pk]
  sexo varcahr(1)
  tempo interval
  nota float
}

Table Pista500 {
  id int [pk]
  sexo varcahr(1)
  tempo interval
  nota float
}

Table Marcor {
  id int [pk]
  sexo varcahr(1)
  tempo interval
  nota float
}

Table PistaTriatlo {
  id int [pk]
  sexo varcahr(1)
  tempo interval
  nota float
}

Table AnoModalidades {
  id int [pk]
  ano int
  modalidade varchar (20)
  peso float
}

//Registo de Lesões

Table Lesoes {
  id int [pk]
  nim int [ref: > Aluno.nim, not null]
  data_ocorrencia date
  situacao varchar (100)
  lesao varchar (200)
  mecanismo_lesao varchar (100)
  zn_anatomica varchar(100)
  gravidade varchar(50)
  recuperacao varchar(10)
  tem_dispensa boolean
  dispensa_dias int
  obs varchar(200)
  data_atualizacao timestamp 
}

//ACE
Table ACE {
  id int [pk]
  nim int [ref: > Aluno.nim]
  tipo_prova varchar(20) //CDU, FADU, IE, Outros
  ace varchar(50) //Mesa Alemã....
  funcao Funcao 
}

Enum Resultado {
  Aprovado
  Nao_Aprovado
  Exame
  IF
}

Enum Ramo {
  EXE 
  GNR
}

Enum Curso {
  INF
  CAV
  ART
  ADMIL
  TM
  ENG
  SMAT_E
  SMAT_M
  ARMAS
  MED
  QETS
}

Enum Funcao {
  delegado
  atleta
}
